-- Schema Oracle pour la clinique dentaire Dentissimo
-- Tables, contraintes et index

-- Franchises (agences de la clinique)
CREATE TABLE franchise (
    franchise_id       NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom                VARCHAR2(120)    NOT NULL,
    adresse            VARCHAR2(240),
    ville              VARCHAR2(80),
    code_postal        VARCHAR2(15),
    telephone          VARCHAR2(30)
);

-- Personnel (interne ou externe)
CREATE TABLE personnel (
    personnel_id       NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom                VARCHAR2(80)     NOT NULL,
    prenom             VARCHAR2(80)     NOT NULL,
    role_metier        VARCHAR2(40)     NOT NULL, -- ex: dentiste, assistant, hygiéniste
    specialite         VARCHAR2(80),
    type_contrat       VARCHAR2(20)     CHECK (type_contrat IN ('INTERNE','EXTERNE')),
    telephone          VARCHAR2(30),
    email              VARCHAR2(120)
);

-- Affectation du personnel aux franchises (historisation)
CREATE TABLE franchise_personnel (
    franchise_personnel_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    franchise_id           NUMBER NOT NULL,
    personnel_id           NUMBER NOT NULL,
    date_debut             DATE   NOT NULL,
    date_fin               DATE,
    CONSTRAINT fk_fp_franchise FOREIGN KEY (franchise_id) REFERENCES franchise(franchise_id),
    CONSTRAINT fk_fp_personnel FOREIGN KEY (personnel_id) REFERENCES personnel(personnel_id),
    CONSTRAINT ck_fp_dates CHECK (date_fin IS NULL OR date_fin >= date_debut)
);

-- Patients
CREATE TABLE patient (
    patient_id         NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom                VARCHAR2(80)     NOT NULL,
    prenom             VARCHAR2(80)     NOT NULL,
    date_naissance     DATE,
    sexe               CHAR(1)          CHECK (sexe IN ('M','F')),
    telephone          VARCHAR2(30),
    email              VARCHAR2(120),
    adresse            VARCHAR2(240),
    ville              VARCHAR2(80),
    code_postal        VARCHAR2(15),
    franchise_ref_id   NUMBER, -- franchise principale fréquentée
    CONSTRAINT fk_patient_franchise FOREIGN KEY (franchise_ref_id) REFERENCES franchise(franchise_id)
);

-- Dossiers médicaux par patient
CREATE TABLE dossier_patient (
    dossier_id         NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    patient_id         NUMBER NOT NULL,
    franchise_id       NUMBER NOT NULL,
    date_creation      DATE   NOT NULL,
    statut             VARCHAR2(20)     CHECK (statut IN ('OUVERT','FERME')),
    motif_consultation VARCHAR2(200),
    notes_generales    VARCHAR2(4000),
    CONSTRAINT fk_dp_patient   FOREIGN KEY (patient_id)   REFERENCES patient(patient_id),
    CONSTRAINT fk_dp_franchise FOREIGN KEY (franchise_id) REFERENCES franchise(franchise_id)
);

-- Traitements rattachés à un dossier
CREATE TABLE traitement (
    traitement_id      NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    dossier_id         NUMBER NOT NULL,
    date_debut         DATE   NOT NULL,
    date_fin           DATE,
    description        VARCHAR2(400),
    cout_estime        NUMBER(10,2),
    statut             VARCHAR2(20)     CHECK (statut IN ('PLANIFIE','EN_COURS','TERMINE')),
    CONSTRAINT fk_tr_dossier FOREIGN KEY (dossier_id) REFERENCES dossier_patient(dossier_id),
    CONSTRAINT ck_tr_dates CHECK (date_fin IS NULL OR date_fin >= date_debut)
);

-- Actes médicaux effectués dans un traitement
CREATE TABLE acte_medical (
    acte_id            NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    traitement_id      NUMBER NOT NULL,
    personnel_id       NUMBER NOT NULL,
    type_acte          VARCHAR2(80)     NOT NULL, -- détartrage, extraction, implant, etc.
    description        VARCHAR2(400),
    date_acte          DATE   NOT NULL,
    montant            NUMBER(10,2),
    radiographie_ref   VARCHAR2(200),   -- lien/nom de fichier
    prescription_text  VARCHAR2(1000),
    CONSTRAINT fk_am_traitement FOREIGN KEY (traitement_id) REFERENCES traitement(traitement_id),
    CONSTRAINT fk_am_personnel  FOREIGN KEY (personnel_id)  REFERENCES personnel(personnel_id)
);

-- Paiements (attachés à un acte ou à un traitement complet)
CREATE TABLE paiement (
    paiement_id        NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    acte_id            NUMBER,
    traitement_id      NUMBER,
    date_paiement      DATE   NOT NULL,
    montant            NUMBER(10,2) NOT NULL,
    mode_paiement      VARCHAR2(20)  CHECK (mode_paiement IN ('CB','ESPECES','VIREMENT','CHEQUE')),
    statut             VARCHAR2(20)  CHECK (statut IN ('PAYE','EN_RETARD','PARTIEL')),
    CONSTRAINT fk_pai_acte       FOREIGN KEY (acte_id)       REFERENCES acte_medical(acte_id),
    CONSTRAINT fk_pai_trait      FOREIGN KEY (traitement_id) REFERENCES traitement(traitement_id),
    CONSTRAINT ck_pai_cible CHECK (
        (acte_id IS NOT NULL AND traitement_id IS NULL) OR
        (acte_id IS NULL AND traitement_id IS NOT NULL)
    )
);

-- Produits dentaires (consommables)
CREATE TABLE produit_dentaire (
    produit_id         NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom                VARCHAR2(120)    NOT NULL,
    type_produit       VARCHAR2(80)     NOT NULL, -- anesthésiant, composite, consommable...
    stock_quantite     NUMBER(10,2),
    unite              VARCHAR2(20),    -- ml, g, unités...
    seuil_alerte       NUMBER(10,2),
    prix_unitaire      NUMBER(10,2)
);

-- Fournisseurs
CREATE TABLE fournisseur (
    fournisseur_id     NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom                VARCHAR2(120)    NOT NULL,
    contact            VARCHAR2(120),
    telephone          VARCHAR2(30),
    email              VARCHAR2(120)
);

-- Commandes aux fournisseurs
CREATE TABLE commande (
    commande_id        NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    fournisseur_id     NUMBER NOT NULL,
    franchise_id       NUMBER NOT NULL,
    date_commande      DATE   NOT NULL,
    statut             VARCHAR2(20)     CHECK (statut IN ('EN_ATTENTE','LIVREE','ANNULEE','PARTIELLE')),
    date_livraison     DATE,
    CONSTRAINT fk_cmd_fournisseur FOREIGN KEY (fournisseur_id) REFERENCES fournisseur(fournisseur_id),
    CONSTRAINT fk_cmd_franchise   FOREIGN KEY (franchise_id)   REFERENCES franchise(franchise_id),
    CONSTRAINT ck_cmd_dates CHECK (date_livraison IS NULL OR date_livraison >= date_commande)
);

-- Lignes de commande
CREATE TABLE commande_ligne (
    commande_ligne_id  NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    commande_id        NUMBER NOT NULL,
    produit_id         NUMBER NOT NULL,
    quantite           NUMBER(10,2) NOT NULL,
    prix_unitaire      NUMBER(10,2) NOT NULL,
    CONSTRAINT fk_cl_commande FOREIGN KEY (commande_id) REFERENCES commande(commande_id),
    CONSTRAINT fk_cl_produit   FOREIGN KEY (produit_id) REFERENCES produit_dentaire(produit_id)
);

-- Equipements médicaux
CREATE TABLE equipement (
    equipement_id      NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    franchise_id       NUMBER,
    nom                VARCHAR2(120)    NOT NULL,
    categorie          VARCHAR2(80),    -- fauteuil, radio, stérilisation...
    date_acquisition   DATE,
    cout_acquisition   NUMBER(12,2),
    statut             VARCHAR2(20)     CHECK (statut IN ('ACTIF','HORS_SERVICE','MAINTENANCE')),
    CONSTRAINT fk_eq_franchise FOREIGN KEY (franchise_id) REFERENCES franchise(franchise_id)
);

-- Dents d'un patient (code FDI)
CREATE TABLE dent (
    dent_id            NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    patient_id         NUMBER NOT NULL,
    code_fdi           VARCHAR2(3)      NOT NULL,
    commentaire        VARCHAR2(200),
    CONSTRAINT fk_dent_patient FOREIGN KEY (patient_id) REFERENCES patient(patient_id),
    CONSTRAINT uc_dent_patient UNIQUE (patient_id, code_fdi)
);

-- Etat d'une dent à une date donnée
CREATE TABLE etat_dent (
    etat_dent_id       NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    dent_id            NUMBER NOT NULL,
    date_observation   DATE   NOT NULL,
    description        VARCHAR2(400),
    acte_id            NUMBER, -- acte ayant conduit à cet état (optionnel)
    CONSTRAINT fk_ed_dent FOREIGN KEY (dent_id) REFERENCES dent(dent_id),
    CONSTRAINT fk_ed_acte FOREIGN KEY (acte_id) REFERENCES acte_medical(acte_id)
);

-- Catalogue des anomalies
CREATE TABLE anomalie (
    anomalie_id        NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    libelle            VARCHAR2(120)    NOT NULL,
    description        VARCHAR2(400),
    severite           VARCHAR2(20)     CHECK (severite IN ('LEGER','MODERE','SEVERE'))
);

-- Anomalies constatées lors d'un état de dent
CREATE TABLE etat_dent_anomalie (
    etat_dent_anomalie_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    etat_dent_id          NUMBER NOT NULL,
    anomalie_id           NUMBER NOT NULL,
    CONSTRAINT fk_eda_etat FOREIGN KEY (etat_dent_id) REFERENCES etat_dent(etat_dent_id),
    CONSTRAINT fk_eda_anom FOREIGN KEY (anomalie_id)  REFERENCES anomalie(anomalie_id)
);

-- Restaurations réalisées sur une dent
CREATE TABLE restauration (
    restauration_id    NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    etat_dent_id       NUMBER NOT NULL,
    type_restauration  VARCHAR2(80)     NOT NULL, -- obturation, couronne, implant, etc.
    materiau           VARCHAR2(80),
    date_pose          DATE   NOT NULL,
    duree_vie_estimee  NUMBER(5,1), -- en années
    CONSTRAINT fk_res_etat FOREIGN KEY (etat_dent_id) REFERENCES etat_dent(etat_dent_id)
);

-- Produits consommés lors d'un acte
CREATE TABLE acte_produit (
    acte_produit_id    NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    acte_id            NUMBER NOT NULL,
    produit_id         NUMBER NOT NULL,
    quantite_utilisee  NUMBER(10,2) NOT NULL,
    CONSTRAINT fk_ap_acte   FOREIGN KEY (acte_id)   REFERENCES acte_medical(acte_id),
    CONSTRAINT fk_ap_produit FOREIGN KEY (produit_id) REFERENCES produit_dentaire(produit_id)
);

-- Equipements utilisés lors d'un acte
CREATE TABLE acte_equipement (
    acte_equipement_id NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    acte_id            NUMBER NOT NULL,
    equipement_id      NUMBER NOT NULL,
    duree_minutes      NUMBER(5,0),
    CONSTRAINT fk_ae_acte FOREIGN KEY (acte_id) REFERENCES acte_medical(acte_id),
    CONSTRAINT fk_ae_eq   FOREIGN KEY (equipement_id) REFERENCES equipement(equipement_id)
);

-- Index utiles
CREATE INDEX idx_dp_patient ON dossier_patient(patient_id);
CREATE INDEX idx_tr_dossier ON traitement(dossier_id);
CREATE INDEX idx_am_traitement ON acte_medical(traitement_id);
CREATE INDEX idx_pai_statut ON paiement(statut);
CREATE INDEX idx_dent_patient ON dent(patient_id);
CREATE INDEX idx_ed_dent ON etat_dent(dent_id);
CREATE INDEX idx_ap_produit ON acte_produit(produit_id);
CREATE INDEX idx_cmd_franchise ON commande(franchise_id);

